feat: implementing user auth
